# retzepee

./: .flake8  .gitignore  Dockerfile  manage.py  pyproject.toml
.github/workflows/: workflow.yml
docker/: docker-compose.dev.yml  entrypoint.sh  run.sh
locale/de_DE/LC_MESSAGES/: django.po
locale/en_us/LC_MESSAGES/: django.po
retzepee/: admin.py  apps.py  asgi.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
retzepee/management/commands/: load_sample_data.py
retzepee/migrations/: 0001_initial.py
retzepee/templates/retzepee/: base.html  recipe.html
