[tool.poetry]
name = "retzepee"
version = "0.1.0"
description = ""
authors = ["Chiron1991 <mail@chiron-online.de>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "*"
django-distill = "*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
isort = "*"

[tool.isort]
profile = "django"
line_length = 120
extend_skip_glob = ["*/migrations/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
